<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_welcomeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CBEDCD">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_welcomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_welcomeFragment"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:contentDescription="@string/image_view_welcome_description"
            app:layout_constraintBottom_toTopOf="@+id/tv_bienvenido"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.696"
            app:srcCompat="@drawable/welcomeimage" />

        <TextView
            android:id="@+id/tv_bienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/text_bienvenida_description"
            android:textColor="@color/morado"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.348" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/edit_text_nombre_hint"
            android:inputType="text"
            android:textColor="#191818"
            android:textColorHint="@color/morado"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_bienvenido"
            app:layout_constraintVertical_bias="0.074" />

        <TextView
            android:id="@+id/tv_categorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/text_view_categorias"
            android:textColor="@color/morado"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nombre"
            app:layout_constraintVertical_bias="0.05" />

        <CheckBox
            android:id="@+id/cb_generales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/checkbox_generales"
            android:textColor="@color/morado"
            app:buttonIconTint="@color/blanco"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_categorias"
            app:layout_constraintVertical_bias="0.101" />

        <CheckBox
            android:id="@+id/cb_deportes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_deportes"
            android:textColor="@color/morado"
            app:buttonIconTint="@color/blanco"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.172"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_generales"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/cb_tecnologia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/checkbox_tecnologia"
            android:textColor="@color/morado"
            app:buttonIconTint="@color/blanco"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.178"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_deportes"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_continuarAWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/button_continuar_warning_fragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_tecnologia"
            app:layout_constraintVertical_bias="0.36" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>