<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_general_new"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4FBD2"
    android:contentDescription="@string/button_add_news">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabe_add_news"
        style="?attr/floatingActionButtonSmallStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="150dp"
        android:clickable="true"
        android:text="@string/text_floating_button"
        app:icon="@drawable/add_news"
        app:iconTint="@color/moradoOscuro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_titulo_general_news"
                style="@style/CategoryTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/titulo_general_news" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGeneralNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical"
                tools:listitem="@layout/item_list_rv" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

